@@ -20,6 +20,8 @@
 	fixed several bugs in the informixtooracledates translation
 	added a droplocalizedtemptables trigger
 	added support for "global temporary" to temptableslocalize translation
+	removed oracletemptablespreserverowsbydefault translation -
+		temptableslocalize is much more effective
 
 0.47 - fixed bug that caused sqlr-export to output negative xml-entity values
 	fixed single-quote-escaping in sqlr-export
